Add a deployment stage to the pipeline2

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,9 @@
 trigger:
 - '*' 
 
+variables:
+  buildConfiguration: 'Release'
+
 stages:
 - stage: 'Build'
   displayName: 'Build the web application'
@@ -62,7 +65,7 @@ stages:
 
     - publish: '$(Build.ArtifactStagingDirectory)'
       artifact: drop
-      
+
 - stage: 'Deploy'
   displayName: 'Deploy the web application'
   dependsOn: Build
